--- a/src/main/resources/templates/front/rooms.html
+++ b/src/main/resources/templates/front/rooms.html
@@ -4,9 +4,9 @@
 <body>
 <th:block th:include="include :: f_header"></th:block>
 <div class="layui-container layui-fluid">
-    <div class="layui-row layui-card">
+    <form lay-filter="searchForm" class="layui-row layui-card layui-form">
         <div class="layui-card-header" style="background-color: #E2E2E2">分类筛选</div>
-        <div class="layui-card-body layui-form">
+        <div class="layui-card-body">
             <div class="layui-form-item">
                 <label class="layui-form-label">科目分类：</label>
                 <div class="layui-input-block">
@@ -34,7 +34,19 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div class="layui-row layui-col-space10">
+            <div class="layui-col-xs12 layui-col-sm10 layui-col-md10">
+                <i class="layui-icon layui-icon-search index-icon-search"></i>
+                <input type="text" name="title" th:value="${title}" class="layui-input index-input" placeholder="搜索答题室内容..."/>
+                <button type="button" id="resetBtn" class="layui-btn layui-btn-primary layui-btn-sm index-search">×</button>
+            </div>
+            <div class="layui-col-xs12 layui-col-sm2 layui-col-md2">
+                <button class="layui-btn layui-btn-fluid layui-bg-purple" id="search" lay-submit lay-filter="search">
+                    <i class="layui-icon">&#xe615; 搜索</i>
+                </button>
+            </div>
+        </div>
+    </form>
     <div class="layui-row layui-card">
         <div class="layui-col-md4 layui-col-sm6 layui-laydate-content" th:each="room : ${rooms}">
             <div style="border: 1px solid #EEEEEE">
@@ -43,7 +55,7 @@
                     <span class="layui-badge room-right" th:text="${room?.timeMode==1?'限时答题':'永久有效'}"></span>
                 </div>
                 <div class="layui-card-body fixed-content-height">
-                    <div class="layui-col-md8">
+                    <div class="layui-col-xs8 layui-col-sm8 layui-col-md8">
                         <p class="content-area" th:text="${room?.content}">答题室内容</p>
                         <div class="layui-col-xs12">
                             <span class="layui-badge layui-bg-blue">标准答题</span>
@@ -52,17 +64,17 @@
                         <span style="margin-top: 5px;" class="layui-badge layui-bg-green">进行中</span>
                         <span style="color: #666; margin: 5px 0 0 10px;">考试分类</span>
                     </div>
-                    <div class="layui-col-md4">
-                        <img src="/images/logo.png" style="height: 120px;padding: 8px;display: flex;"/>
+                    <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
+                        <img src="/images/logo.png"/>
                     </div>
                     <hr/>
                     <div class="layui-col-space5" style="margin-top: 10px;">
-                        <div class="layui-col-xs6">
+                        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
                             <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-red">
                                 <i class="layui-icon layui-icon-edit"></i> 阅卷
                             </button>
                         </div>
-                        <div class="layui-col-xs6">
+                        <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
                             <button class="layui-btn layui-btn-fluid layui-btn-primary layui-border-orange">
                                 <i class="layui-icon layui-icon-file-b"></i> 报告
                             </button>
@@ -95,7 +107,11 @@
             let pid = $('.filter-tag[data-pid].active').data('pid');
             let eid = $('.filter-tag[data-eid].active').data('eid');
             let mid = $('.filter-tag[data-mid].active').data('mid');
-            location.href = `/rooms?sid=${pid}&eid=${eid}&mid=${mid}`;
+            window.location.href = `/rooms?sid=${pid}&eid=${eid}&mid=${mid}`;
+        });
+        $('#resetBtn').on('click', function () {
+            form.val('searchForm', {"title": ""});
+            form.render();
         });
     });
 </script>
