--- a/src/main/resources/templates/admin/welcome.html
+++ b/src/main/resources/templates/admin/welcome.html
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td><strong>服务器上次启动到现在已运行</strong></td>
-                    <td id="runTime">[[${startDate}]]</td>
+                    <td id="runTime" th:data-time="${startDate}"></td>
                 </tr>
                 <tr>
                     <td><strong>JAVA版本</strong></td>
@@ -90,16 +90,11 @@
 </div>
 <script th:inline="javascript">
     function intervalTime() {
-        var runTime = document.getElementById("runTime").innerHTML;
-        var date = new Date(runTime);
-        var lag = new Date().getTime() - date.getTime();  //时间差的毫秒数
-        //计算出相差天数
-        var days = Math.floor(lag / (24 * 3600 * 1000));
-        //计算出小时数
-        var leave1 = lag % (24 * 3600 * 1000);    //计算天数后剩余的毫秒数
-        var hours = Math.floor(leave1 / (3600 * 1000));
-        var ret = days + "天 " + hours + "小时 ";
-        document.getElementById("runTime").innerHTML = ret;
+        var runTime = new Date(document.getElementById("runTime").dataset.time);
+        var totalSeconds = Math.floor((new Date().getTime() - runTime.getTime()) / 1000);  //时间差的毫秒数
+        var hours = Math.floor((totalSeconds % (24 * 3600)) / 3600); //计算出小时数
+        var days = Math.floor(totalSeconds / (24 * 3600)); //计算出相差天数
+        document.getElementById("runTime").innerHTML = days + "天 " + hours + "小时 ";
     }
 
     // 对Date的扩展，将 Date 转化为指定格式的String
