--- a/src/main/resources/templates/admin/lms/exam/edit.html
+++ b/src/main/resources/templates/admin/lms/exam/edit.html
@@ -64,7 +64,7 @@
 
         dtree.renderSelect({
             elem: "#dTree",
-            url: "/admin/lms/exam/subject/tree",
+            url: "/admin/subject/tree",
             done: function (data, obj, first) {
                 if (first) {
                     dtree.dataInit("dTree", $('#pid').val());
