--- a/src/main/resources/templates/admin/welcome.html
+++ b/src/main/resources/templates/admin/welcome.html
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td><strong>服务器上次启动到现在已运行</strong></td>
-                    <td id="runTime" th:data-time="${startDate}"></td>
+                    <td id="runTime" th:data-time="${#dates.format(startDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                 </tr>
                 <tr>
                     <td><strong>JAVA版本</strong></td>
@@ -92,8 +92,8 @@
     function intervalTime() {
         var runTime = new Date(document.getElementById("runTime").dataset.time);
         var totalSeconds = Math.floor((new Date().getTime() - runTime.getTime()) / 1000);  //时间差的毫秒数
-        var hours = Math.floor((totalSeconds % (24 * 3600)) / 3600); //计算出小时数
         var days = Math.floor(totalSeconds / (24 * 3600)); //计算出相差天数
+        var hours = Math.floor((totalSeconds % (24 * 3600)) / 3600); //计算出小时数
         document.getElementById("runTime").innerHTML = days + "天 " + hours + "小时 ";
     }
 
