--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -22,24 +22,20 @@
 <!-- 头部信息 -->
 <div th:fragment="header">
     <div class="layui-header">
-        <!-- logo 区域 -->
         <div class="layui-logo">
             <img th:src="@{/images/logo.png}" alt="logo" style="margin-left: -5px;"/>
             <cite>管理系统</cite>
         </div>
-        <!-- 头部区域 -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item">
                 <a lay-event="flexible" title="侧边伸缩" lay-unselect>
                     <i class="layui-icon layui-icon-shrink-right"></i>
                 </a>
             </li>
-            <!-- 面包屑 -->
             <span class="layui-breadcrumb layui-anim layui-anim-up">
                 <a><cite>首页</cite></a>
             </span>
         </ul>
-        <!-- 头像区域 -->
         <ul class="layui-nav layui-layout-right">
             <!--<li class="layui-nav-item layui-hide-xs" lay-unselect>
                 <a lay-event="clear" title="清理">
@@ -71,11 +67,10 @@
         </ul>
     </div>
 </div>
-</div>
 
 <!-- 尾部信息 -->
 <div th:fragment="footer">
-    <div class="layui-footer">
+    <div class="layui-footer layui-container">
         <p>© 2025 <a href="#" target="_blank" style="color: #3498db; text-decoration: none;">做题吧</a> 版权所有 | 冀ICP备12345678号</p>
     </div>
     <!-- 移动端遮罩 -->
@@ -83,80 +78,70 @@
 </div>
 
 <div th:fragment="f_header">
-    <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); margin-bottom: 20px;">
-        <div class="layui-container">
-            <div class="layui-header">
-                <div class="layui-row">
-                    <!-- Logo -->
-                    <div class="layui-logo" style="color: #fff; font-size: 22px; height: 60px; line-height: 45px;">
-                        <img th:src="@{/images/logo.png}" alt="logo" height="30px"/>
-                        <cite>做题吧</cite>
-                    </div>
-                    <!-- 导航菜单 - LayUI会自动处理手机端适配 -->
-                    <ul class="layui-nav layui-layout-left" style="background: transparent;" id="mainNav">
-                        <li class="layui-nav-item" data-page="home">
-                            <a href="/" style="color: #fff;">首页</a>
-                        </li>
-                        <li class="layui-nav-item LAY_TRIGGER" data-page="rooms">
-                            <a href="/rooms" style="color: #fff;">课程中心 <i class="layui-icon">&#xe61a;</i></a>
-                        </li>
-                        <li class="layui-nav-item LAY_TRIG" data-page="learns">
-                            <a href="/learns" style="color: #fff;">知识库 <i class="layui-icon">&#xe61a;</i></a>
-                        </li>
-                        <li class="layui-nav-item" data-page="comments">
-                            <a href="/comment" style="color: #fff;">问答社区</a>
-                        </li>
-                    </ul>
-                    <!-- 右侧登录 -->
-                    <ul class="layui-nav layui-layout-right" style="background: transparent;">
-                        <li class="layui-nav-item" th:if="${session.username!= null}">
-                            <a>
-                                <img th:src="@{/images/logo.png}" class="layui-nav-img" alt="头像">
-                                <cite style="margin: 0 10px;">[[${session.username?:'用户'}]]</cite>
-                            </a>
-                            <dl class="layui-nav-child">
-                                <dd lay-unselect><a lay-event="userInfo">基本资料</a></dd>
-                                <dd lay-unselect><a lay-event="editPwd">修改密码</a></dd>
-                                <hr>
-                                <dd lay-unselect><a th:href="@{/logout}">退出</a></dd>
-                            </dl>
-                        </li>
-                        <li class="layui-nav-item" th:unless="${session.username!= null}">
-                            <a th:href="@{/login}" style="color: #fff;">
-                                <i class="layui-icon layui-icon-username"></i> 登录
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+    <div class="layui-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+        <div class="layui-container layui-row" style="margin-bottom: 20px;">
+            <div class="layui-logo" style="color: #fff; font-size: 22px; padding-top: 10px;">
+                <img th:src="@{/images/logo.png}" alt="logo" height="30px"/>
+                <cite>做题吧</cite>
             </div>
+            <ul id="mainNav" class="layui-nav layui-layout-left" style="background: transparent;">
+                <li class="layui-nav-item" data-page="home">
+                    <a href="/" style="color: #fff;">首页</a>
+                </li>
+                <li class="layui-nav-item LAY_TRIGGER" data-page="rooms">
+                    <a href="/rooms" style="color: #fff;">课程中心 <i class="layui-icon">&#xe61a;</i></a>
+                </li>
+                <li class="layui-nav-item LAY_TRIG" data-page="learns">
+                    <a href="/learns" style="color: #fff;">知识库 <i class="layui-icon">&#xe61a;</i></a>
+                </li>
+                <li class="layui-nav-item" data-page="comments">
+                    <a href="/comment" style="color: #fff;">问答社区</a>
+                </li>
+            </ul>
+            <ul class="layui-nav layui-layout-right" style="background: transparent;">
+                <li class="layui-nav-item" th:if="${session.username!= null}">
+                    <a>
+                        <img th:src="@{/images/logo.png}" class="layui-nav-img" alt="头像">
+                        <cite style="margin: 0 10px;">[[${session.username?:'用户'}]]</cite>
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd lay-unselect><a lay-event="userInfo">基本资料</a></dd>
+                        <dd lay-unselect><a lay-event="editPwd">修改密码</a></dd>
+                        <hr>
+                        <dd lay-unselect><a th:href="@{/logout}">退出</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item" th:unless="${session.username!= null}">
+                    <a th:href="@{/login}" style="color: #fff;">
+                        <i class="layui-icon layui-icon-username"></i> 登录
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
 
 <div th:fragment="f_footer">
     <div class="layui-footer" style="background: #2c3e50; color: #fff; padding: 40px 0 20px; margin-top: auto;">
-        <div class="layui-container">
-            <div class="layui-row" style="margin-bottom:15px;">
-                <!-- 平台介绍 -->
-                <div class="layui-col-md6">
-                    <div class="layui-font-20">
-                        <img src="/images/logo.png" alt="logo" height="24px" style="vertical-align: middle; margin-right: 10px;">
-                        做题吧平台
-                    </div>
-                    <div class="layui-font-14" style="color: #bdc3c7; line-height: 1.6; margin-bottom: 20px;">
-                        专注于提供高质量的在线做题平台，帮助您实现成长。我们致力于为用户提供最优质的学习体验。
-                    </div>
+        <div class="layui-container layui-row" style="margin-bottom:15px;">
+            <div class="layui-col-md6">
+                <div class="layui-font-20">
+                    <img src="/images/logo.png" alt="logo" height="24px" style="vertical-align: middle; margin-right: 10px;">
+                    做题吧平台
                 </div>
-                <!-- 学习资源 -->
-                <div class="layui-col-md2">
+                <div class="layui-font-14" style="color: #bdc3c7; line-height: 1.6; margin: 10px 40px 10px 0;">
+                    专注于提供高质量的在线做题平台，帮助您实现成长。我们致力于为用户提供最优质的学习体验。
+                </div>
+            </div>
+            <div class="layui-col-md6">
+                <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
                     <div class="layui-font-16">学习资源</div>
                     <div class="layui-font-14">
                         <a href="/rooms" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">课程中心</a>
                         <a href="/learns" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">知识库</a>
                     </div>
                 </div>
-                <!-- 服务支持 -->
-                <div class="layui-col-md2">
+                <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
                     <div class="layui-font-16">服务支持</div>
                     <div class="layui-font-14">
                         <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">帮助中心</a>
@@ -164,8 +149,7 @@
                         <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">联系我们</a>
                     </div>
                 </div>
-                <!-- 关于我们 -->
-                <div class="layui-col-md2">
+                <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
                     <div class="layui-font-16">关于我们</div>
                     <div class="layui-font-14">
                         <a href="#" style="color: #bdc3c7;display: block;margin: 0 15px 10px 0;">公司介绍</a>
@@ -174,12 +158,10 @@
                     </div>
                 </div>
             </div>
-            <!-- 底部版权 -->
-            <th:block th:include="include :: footer"></th:block>
         </div>
+        <th:block th:include="include :: footer"></th:block>
     </div>
-    <!-- 移动端遮罩 -->
-    <div class="site-mobile-shade"></div>
+    <div class="site-mobile-shade" th:alt="移动端遮罩"></div>
     <script>
         function layPage(id, count, curr, limit) {
             layui.laypage.render({
@@ -200,6 +182,7 @@
                 }
             });
         }
+
         layui.use(['jquery', 'element', 'form', 'carousel', 'dropdown'], function ($, element, form, carousel, dropdown) {
             var pageMap = {
                 '/': 'home', '/index': 'home', '/index.html': 'home',
